--- a/index.html
+++ b/index.html
@@ -9,16 +9,58 @@
 <body>
     <header>
         <h1>Meet Our Team</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
     </header>
 
-    <main>
-        <section>
-            <div>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur.</div>
-        </section>
-
-        <section>
-
-        </section>
+    <main class="column clearfix">
+        <div class="col">
+            <img src="img/male1.png" alt="">
+            <ul>
+                <li><strong>Marco Bianchi</strong></li>
+                <li>Deisgner</li>
+                <li id="email">marcobianchi@team.com</li>
+            </ul>
+        </div>
+        <div class="col">
+            <img src="img/female1.png" alt="">
+            <ul>
+                <li><strong>Laura Rossi</strong></li>
+                <li>Fron-end Developer</li>
+                <li id="email">laurarossi@team.com</li>
+            </ul>
+        </div>
+        <div class="col">
+            <img src="img/male2.png" alt="">
+            <ul>
+                <li><strong>Giorgio Verdi</strong></li>
+                <li>Back-end Developer</li>
+                <li id="email">giorgioverdi@team.com</li>
+            </ul>
+        </div>
+        <div class="col">
+            <img src="img/female2.png" alt="">
+            <ul>
+                <li><strong>Marta Ipsum</strong></li>
+                <li>SEO Specialist</li>
+                <li id="email">martaipsum@team.com</li>
+            </ul>
+        </div>
+        <div class="col">
+            <img src="img/male3.png" alt="">
+            <ul>
+                <li><strong>Roberto Lorem</strong></li>
+                <li>Project Manager</li>
+                <li id="email">robertolorem@team.com</li>
+            </ul>
+        </div>
+        <div class="col">
+            <img src="img/female3.png" alt="">
+            <ul>
+                <li><strong>Daniela Amet</strong></li>
+                <li>Analyst</li>
+                <li id="email">danielaamet@team.com</li>
+            </ul>
+        </div>
     </main>
 </body>
 </html>
